--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,20 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 70px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
+  background-color: lightblue;
+  height: 70%;
 }
 
 .Canvas {
@@ -30,6 +19,7 @@
 
 .Cell:hover {
     cursor: crosshair;
+    border-color: darkgreen;
 }
 
 .canvasLine {
@@ -38,30 +28,70 @@
 }
 
 .Palette {
-    width: 90%;
+    width: 1100px;
     height: 70px;
-    float: left;
-    clear: both;
     background-color: beige;
-    border: 2px solid #000;
-    margin: 5px 5%;
+    border: 1px solid #000;
+    margin: 2px auto;
     border-radius: 100px;
+    box-shadow: 3px 3px gray;
 }
 
 .PaletteElement {
+    height: 56px;
+    width: 56px;
+    border: 1px solid;
+    display: inline-block;
+    margin-left: 4px;
+    margin-top: 7px;
+    border-radius: 100px;
+}
+
+.CurrentColorView {
     height: 80%;
     width: 56px;
     border: 1px solid;
     display: inline-block;
-    position: relative;
-    float: left;
-    margin-left: 4px;
-    top: 10%;
-    left: 5px;
+    margin-left: 10px;
+    margin-top: 7px;
     border-radius: 100px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.verticalRule {
+    border-left: 3px double black;
+    height: 56px;
+    margin-top: 7px;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.navigationLink {
+    border: 0;
+    background-color: lightblue;
+    padding: 14px 16px;
+    font-family: sans-serif;
+    font-size: medium;
+}
+
+.navigationLink:hover {
+    background-color: cadetblue;
+}
+
+input[type=color] {
+    display: none;
+}
+
+img {
+    width: 35px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+li {
+    display: inline;
 }
