--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,33 +1,33 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-header {
+.app-header {
   background-color: lightblue;
   height: 70%;
 }
 
-.Canvas {
+.canvas {
     display: inline-block;
 }
 
-.Cell {
+.cell {
   width: 2.857%;
   height: 100%;
   border: 1px solid #ccc;
 }
 
-.Cell:hover {
+.cell:hover {
     cursor: crosshair;
     border-color: darkgreen;
 }
 
-.canvasLine {
+.canvas-line {
     width: 700px;
     height: 20px;
 }
 
-.Palette {
+.palette {
     width: 1100px;
     height: 70px;
     background-color: beige;
@@ -37,7 +37,7 @@
     box-shadow: 3px 3px gray;
 }
 
-.PaletteElement {
+.palette-element {
     height: 56px;
     width: 56px;
     border: 1px solid;
@@ -47,7 +47,7 @@
     border-radius: 100px;
 }
 
-.CurrentColorView {
+.current-color-view {
     height: 80%;
     width: 56px;
     border: 1px solid;
@@ -57,7 +57,7 @@
     border-radius: 100px;
 }
 
-.verticalRule {
+.vertical-rule {
     border-left: 3px double black;
     height: 56px;
     margin-top: 7px;
@@ -65,7 +65,7 @@
     margin-left: 10px;
 }
 
-.navigationLink {
+.navigation-link {
     border: 0;
     background-color: lightblue;
     padding: 14px 16px;
@@ -73,7 +73,7 @@
     font-size: medium;
 }
 
-.navigationLink:hover {
+.navigation-link:hover {
     background-color: cadetblue;
 }
 
